unpackaged/main/default/objects/CMPL123CME__EMDR__c/CMPL123CME__EMDR__c.object-meta.xml
<CustomObject>
    <label>EMDR</label>
    <nameField>
        <displayFormat>EMDR-{00000}</displayFormat>
        <label>EMDR No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMDR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>