unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/Assessment__c.field-meta.xml
<CustomField>
        <fullName>Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment</label>
        <referenceTo>CMPL123CME__Questionnaire__c</referenceTo>
        <relationshipLabel>EMDR</relationshipLabel>
        <relationshipName>EMDR</relationshipName>
        <type>Lookup</type>
    </CustomField>