unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__A1_Patient_Identifier__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__A1_Patient_Identifier__c</fullName>
        <description>Unique patient identifier assigned by the reporter.</description>
        <inlineHelpText>Patient Identifier</inlineHelpText>
        <label>A1 - Patient Identifier</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>