unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__A2_Age_at_Time_of_Event__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__A2_Age_at_Time_of_Event__c</fullName>
        <description>Patient's age when the event occurred.</description>
        <label>A2 - Age at Time of Event</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>