unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__A2_Age_Units_Patient__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__A2_Age_Units_Patient__c</fullName>
        <description>Units of patient age.</description>
        <label>A2 - Age Units (Patient)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>