unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__A2_DOB__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__A2_DOB__c</fullName>
        <description>Patient's date of birth.</description>
        <label>A2 - DOB</label>
        <type>Date</type>
    </CustomField>