unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__A2_DOB_Null__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__A2_DOB_Null__c</fullName>
        <description>Used if the patient's date of birth is not being provided in the report.</description>
        <label>A2 - DOB Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>