unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__A2_Patient_Days_Old__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__A2_Patient_Days_Old__c</fullName>
        <formula>CMPL123CME__B3_Date_of_Event__c - CMPL123CME__A2_DOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A2 - Patient Days Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>