unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__A2_Patient_Months_Old__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__A2_Patient_Months_Old__c</fullName>
        <formula>(YEAR(CMPL123CME__B3_Date_of_Event__c) - YEAR(CMPL123CME__A2_DOB__c) ) * 12  +  
	IF( MONTH(CMPL123CME__B3_Date_of_Event__c) &gt; MONTH(CMPL123CME__A2_DOB__c), 
		IF( DAY(CMPL123CME__B3_Date_of_Event__c) &gt;= DAY(CMPL123CME__A2_DOB__c), 
				MONTH(CMPL123CME__B3_Date_of_Event__c) - MONTH(CMPL123CME__A2_DOB__c), 
				MONTH(CMPL123CME__B3_Date_of_Event__c) - MONTH(CMPL123CME__A2_DOB__c) - 1 
		),
		IF( MONTH(CMPL123CME__B3_Date_of_Event__c) != MONTH(CMPL123CME__A2_DOB__c), 
			IF( DAY(CMPL123CME__B3_Date_of_Event__c) &gt;= DAY(CMPL123CME__A2_DOB__c), 
				MONTH(CMPL123CME__B3_Date_of_Event__c) - MONTH(CMPL123CME__A2_DOB__c), 
				MONTH(CMPL123CME__B3_Date_of_Event__c) - MONTH(CMPL123CME__A2_DOB__c)-1 
			),
			IF( DAY(CMPL123CME__B3_Date_of_Event__c) &gt;= DAY(CMPL123CME__A2_DOB__c), 
				0, 
				-1 
			) 
		) 
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A2 - Patient Months Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>