unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__A3_Sex__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__A3_Sex__c</fullName>
        <description>Patient's gender.</description>
        <label>A3 - Sex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>