unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__A4_Weight__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__A4_Weight__c</fullName>
        <description>Patient's weight.</description>
        <label>A4 - Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>