unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__A4_Weight_Units_Patient__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__A4_Weight_Units_Patient__c</fullName>
        <description>Units of weight.</description>
        <label>A4 - Weight Units (Patient)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LBS</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>