unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__A5A_Ethnicity__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__A5A_Ethnicity__c</fullName>
        <description>Ethnicity</description>
        <inlineHelpText>Ethnicity</inlineHelpText>
        <label>A5a - Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>