unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__A5B_Race__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__A5B_Race__c</fullName>
        <description>Race</description>
        <inlineHelpText>Race</inlineHelpText>
        <label>A5b - Race</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>American Indian or Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>