unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__B1_AdverseEvent_ProductProblem__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__B1_AdverseEvent_ProductProblem__c</fullName>
        <description>The type of event being reported.</description>
        <inlineHelpText>Adverse Event/Product Problem</inlineHelpText>
        <label>B1 - Adverse Event/Product Problem</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adverse Event</fullName>
                </value>
                <value>
                    <fullName>Product Problem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>