unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__B2_Date_of_Death__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__B2_Date_of_Death__c</fullName>
        <description>If the patient died, the date the death occurred.</description>
        <label>B2 - Date of Death</label>
        <type>Date</type>
    </CustomField>