unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__B2_Death_Date_Null__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__B2_Death_Date_Null__c</fullName>
        <description>If the patient died, but the date of death is not  being provided in the report.</description>
        <label>B2 - Death Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>