unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__B2_Outcomes_attributed_to_AE__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__B2_Outcomes_attributed_to_AE__c</fullName>
        <description>Resulting patient conditions due to the adverse event(s) being reported.</description>
        <label>B2 - Outcomes Attributed to AE</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Life-threatening</fullName>
                </value>
                <value>
                    <fullName>Disability or Permanent Damage</fullName>
                </value>
                <value>
                    <fullName>Congenital Anomaly/Birth Defect</fullName>
                </value>
                <value>
                    <fullName>Hospitalization-initial or prolonged</fullName>
                </value>
                <value>
                    <fullName>Other Serious</fullName>
                </value>
                <value>
                    <fullName>Required Intervention</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>