unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__B2_Outcomes_attributed_to_AE_Null__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__B2_Outcomes_attributed_to_AE_Null__c</fullName>
        <description>Used if no selections are made in the Outcomes attributed to AE field.</description>
        <label>B2 - Outcomes Attributed to AE Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>