unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__B3_Date_of_Event__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__B3_Date_of_Event__c</fullName>
        <description>Date problem occurred or date of onset of symptoms.</description>
        <label>B3 - Date of Event</label>
        <type>Date</type>
    </CustomField>