unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__B3_Date_of_Event_Null__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__B3_Date_of_Event_Null__c</fullName>
        <description>Used if no date of event found.</description>
        <label>B3 - Date of Event Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>