unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__B4_Report_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__B4_Report_Date__c</fullName>
        <description>Date the report is submitted to FDA. Review this with Rosalind compared to HL7 spreadsheet.</description>
        <inlineHelpText>Date of this Report (Device only)</inlineHelpText>
        <label>B4 - Report Date</label>
        <type>Date</type>
    </CustomField>