unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__B5_Describe_Event_or_Problem__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__B5_Describe_Event_or_Problem__c</fullName>
        <description>Detailed description of adverse event or product problem which may include signs/symptoms, diagnoses, relevant clinical information, medical status prior to event, clinical course, treatment, outcome.</description>
        <label>B5 - Describe Event or Problem</label>
        <length>32765</length>
        <type>LongTextArea</type>
    </CustomField>