unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__B6_Relevant_Test_Laboratory_Data__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__B6_Relevant_Test_Laboratory_Data__c</fullName>
        <description>Any testing or laboratory diagnostics conducted to identify the problem or etiology of the adverse event. May include relevant negative test/lab findings, baseline lab data, lab data used in diagnosing the event, engineering analysis, pathology reports, autopsy reports.</description>
        <label>B6 - Relevant Test/Laboratory Data</label>
        <length>32765</length>
        <type>LongTextArea</type>
    </CustomField>