unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__B7_Other_Relevant_History__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__B7_Other_Relevant_History__c</fullName>
        <description>Other known patient conditions including preexisting medical diagnoses. Used only for adverse event reports.</description>
        <label>B7 - Other Relevant  History</label>
        <length>32765</length>
        <type>LongTextArea</type>
    </CustomField>