unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__Become_Aware_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Become_Aware_Date__c</fullName>
        <description>Date that the manufacturer became aware of the reportable event.</description>
        <label>Become Aware Date</label>
        <type>Date</type>
    </CustomField>