unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C10_Event_Reappeared_After_Reintroduct1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C10_Event_Reappeared_After_Reintroduct1__c</fullName>
        <description>C10 - #1 Event Reappeared After Reintro</description>
        <inlineHelpText>C10 - #1 Event Reappeared After Reintro</inlineHelpText>
        <label>C10 - #1 Event Reappeared After Reintro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Doesn't Apply</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>