unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C1_Lot_Number1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C1_Lot_Number1__c</fullName>
        <description>C1 - #1 Lot #</description>
        <inlineHelpText>C1 - #1 Lot #</inlineHelpText>
        <label>C1 - #1 Lot #</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>