unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C1_Manufacturer_Compounder1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C1_Manufacturer_Compounder1__c</fullName>
        <description>C1 - #1 Manufacturer/Compounder</description>
        <inlineHelpText>C1 - #1 Manufacturer/Compounder</inlineHelpText>
        <label>C1 - #1 Manufacturer/Compounder</label>
        <length>500</length>
        <type>LongTextArea</type>
    </CustomField>