unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C1_Name_and_Strength1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C1_Name_and_Strength1__c</fullName>
        <description>C1 - #1 Name and Strength</description>
        <inlineHelpText>C1 - #1 Name and Strength</inlineHelpText>
        <label>C1 - #1 Name and Strength</label>
        <type>TextArea</type>
    </CustomField>