unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C1_NDC_or_Unique_ID1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C1_NDC_or_Unique_ID1__c</fullName>
        <description>C1 - #1 NDC # or Unique ID</description>
        <inlineHelpText>C1 - #1 NDC # or Unique ID</inlineHelpText>
        <label>C1 - #1 NDC # or Unique ID</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>