unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C2_Concom_Med_Prod_and_Therapy_Dates__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C2_Concom_Med_Prod_and_Therapy_Dates__c</fullName>
        <description>C2 - Concom Med Prod and Therapy Dates</description>
        <label>C2 - Concom Med Prod and Therapy Dates</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>