unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C3_Dose1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C3_Dose1__c</fullName>
        <description>C3 - #1 Dose</description>
        <inlineHelpText>Dose</inlineHelpText>
        <label>C3 - #1 Dose</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </CustomField>