unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C3_Dose2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C3_Dose2__c</fullName>
        <description>C3 - #2 Dose</description>
        <inlineHelpText>C3 - #2 Dose</inlineHelpText>
        <label>C3 - #2 Dose</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </CustomField>