unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C3_Dose_Units1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C3_Dose_Units1__c</fullName>
        <description>C3 - #1 Dose Units</description>
        <inlineHelpText>C3 - #1 Dose Units</inlineHelpText>
        <label>C3 - #1 Dose Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>kg kilogram</fullName>
                </value>
                <value>
                    <fullName>g gram</fullName>
                </value>
                <value>
                    <fullName>mg milligram</fullName>
                </value>
                <value>
                    <fullName>μg microgram</fullName>
                </value>
                <value>
                    <fullName>ng nanogram</fullName>
                </value>
                <value>
                    <fullName>pg picogram</fullName>
                </value>
                <value>
                    <fullName>mg/kg milligram/kilogram</fullName>
                </value>
                <value>
                    <fullName>μg/kg microgram/kilogram</fullName>
                </value>
                <value>
                    <fullName>mg/m2 milligram/sq. meter</fullName>
                </value>
                <value>
                    <fullName>μg/m2 microgram/sq. meter</fullName>
                </value>
                <value>
                    <fullName>l litre</fullName>
                </value>
                <value>
                    <fullName>ml millilitre</fullName>
                </value>
                <value>
                    <fullName>μl microlitre</fullName>
                </value>
                <value>
                    <fullName>Bq becquerel</fullName>
                </value>
                <value>
                    <fullName>GBq gigabecquerel</fullName>
                </value>
                <value>
                    <fullName>MBq megabecquerel</fullName>
                </value>
                <value>
                    <fullName>Kbq kilobecquerel</fullName>
                </value>
                <value>
                    <fullName>Ci curie</fullName>
                </value>
                <value>
                    <fullName>mCi millicurie</fullName>
                </value>
                <value>
                    <fullName>μCi microcurie</fullName>
                </value>
                <value>
                    <fullName>nCi nanocurie</fullName>
                </value>
                <value>
                    <fullName>Mol mole</fullName>
                </value>
                <value>
                    <fullName>mmol millimole</fullName>
                </value>
                <value>
                    <fullName>μmol micromole</fullName>
                </value>
                <value>
                    <fullName>Iu international unit</fullName>
                </value>
                <value>
                    <fullName>Kiu Iu (1000s)</fullName>
                </value>
                <value>
                    <fullName>Miu Iu (1,000,000s)</fullName>
                </value>
                <value>
                    <fullName>iu/kg iu/kilogram</fullName>
                </value>
                <value>
                    <fullName>Meq milliequivalent</fullName>
                </value>
                <value>
                    <fullName>% percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>