unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C3_Frequency1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C3_Frequency1__c</fullName>
        <description>Frequency</description>
        <inlineHelpText>Frequency</inlineHelpText>
        <label>C3 - #1 Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>