unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C3_Frequency2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C3_Frequency2__c</fullName>
        <description>C3 - #2 Frequency</description>
        <inlineHelpText>C3 - #2 Frequency</inlineHelpText>
        <label>C3 - #2 Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>